# woofx3

./: .dockerignore  .env.vault  .gitignore  .pc_env  .replit  .woofx3.json.example  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.production  LICENSE.md  Makefile  README.md  SPEC.md  axogen.config.ts  browser-source-spec.md  bun.lockb  devbox.json  docker-compose.yaml  package.json  process-compose.yml  replit.md  woofx3.code-workspace
.devcontainer/: devcontainer.json
alertbox/: bun.lockb  package.json
api/: README.md  bun.lockb  package.json  tsconfig.json
auth/: go.mod  go.sum
barkloader/: artillery.yml  bun.lockb  index.ts  nats.ts  package.json  tsconfig.json  types.ts  wasmoon-test.ts
barkloader-rust/: Cargo.toml  bun.lockb  package.json  test.ts
barkloader-rust/app/: Cargo.toml
barkloader-rust/app/examples/: s3_repository_example.rs
barkloader-rust/app/src/: errors.rs  main.rs  types.rs  util.rs  websocket.rs
barkloader-rust/app/src/routes/: functions.rs  mod.rs  websocket.rs
barkloader-rust/app/src/services/: file_service.rs  mod.rs  module_service.rs
barkloader-rust/app/src/services/module_service/: db_proxy.rs  mod.rs  module_file.rs  module_install.rs  module_manifest.rs  module_plan.rs  module_service.rs
barkloader-rust/app/src/storage/: init.rs  mod.rs  service.rs
barkloader-rust/app/tests/: module_storage_test.rs
barkloader-rust/lib_repository/: Cargo.toml
barkloader-rust/lib_repository/src/: file_repository.rs  lib.rs  repository.rs  s3_repository.rs
barkloader-rust/lib_repository/src/repositories/: file.rs  mod.rs  s3.rs
barkloader-rust/lib_sandbox/: Cargo.toml
barkloader-rust/lib_sandbox/src/: error.rs  function_executor.rs  lib.rs  module_manager.rs  module_registry.rs  sandbox.rs
barkloader-rust/lib_sandbox/src/host/: grpc.rs  mod.rs  noop.rs
barkloader-rust/lib_sandbox/src/models/: function.rs  mod.rs  request.rs
barkloader-rust/lib_sandbox/src/runtime/: bun.rs  echo.rs  lua.rs  mod.rs  quickjs.rs
barkloader-rust/lib_sandbox/tests/: lib_test.rs
barkloader-rust/lib_sandbox/tests/modules/example/: helloworld.lua  sayhello.js
buf/: buf.gen.yaml  bun.lockb  package.json  proto.config.js
chat/: README.md  bun.lockb  devbox.json  package.json
clips/: bun.lockb  (+3 more)
shared/clients/rust/db/: Cargo.toml
shared/clients/rust/db/src/: lib.rs
shared/clients/rust/db/src/alert/: alert.rs  alert.serde.rs  alert.tonic.rs
shared/clients/rust/db/src/application/: application.rs  application.serde.rs  application.tonic.rs
shared/clients/rust/db/src/client/: client.rs  client.serde.rs  client.tonic.rs
shared/clients/rust/db/src/command/: command.rs  command.serde.rs  command.tonic.rs
shared/clients/rust/db/src/common/: common.rs  common.serde.rs  common.tonic.rs
shared/clients/rust/db/src/module/: module.rs  module.serde.rs  module.tonic.rs
shared/clients/rust/db/src/permission/: permission.rs  permission.serde.rs  permission.tonic.rs
shared/clients/rust/db/src/scene/: scene.rs  scene.serde.rs  scene.tonic.rs
shared/clients/rust/db/src/setting/: setting.rs  setting.serde.rs  setting.tonic.rs
shared/clients/rust/db/src/storage/: storage.rs  storage.serde.rs  storage.tonic.rs
shared/clients/rust/db/src/treat/: treat.rs  treat.serde.rs  treat.tonic.rs
shared/clients/rust/db/src/user/: user.rs  user.serde.rs  user.tonic.rs
shared/clients/rust/db/src/widget_status/: widget_status.rs  widget_status.serde.rs  widget_status.tonic.rs
shared/clients/rust/db/src/workflow/: workflow.rs  workflow.serde.rs  workflow.tonic.rs
shared/clients/rust/twirp/: Cargo.toml
shared/clients/rust/twirp/src/: lib.rs  workflow.rs
(+1080 files in other folders)
