[package]
name = "barkloader"
version = "0.1.0"
edition = "2024"

[dependencies]
woofx3-twirp = { path = "../../shared/clients/rust/twirp" }
woofx3 = { path = "../../shared/clients/rust/db" }
woofx3-runtime = { path = "../../shared/common/rust/runtime" }
actix-web = "4.10"
actix-ws = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = { version = "0.15", default-features = false }
once_cell = "1.19.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10"
anyhow = "1.0.98"
futures-util = "0.3.31"
log = "0.4.27"
actix-multipart = "0.7.2"
futures = "0.3.31"
uuid = { version = "1.16.0", features = ["v4"] }
sanitize-filename = "0.6.0"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "sync"] }
serde_yaml = "0.9.34"
tonic = "0.14.2"
zip = "2.1"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dependencies.lib_repository]
path = "../lib_repository"

[dependencies.lib_sandbox]
path = "../lib_sandbox"
