[package]
name = "lib_repository"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-s3 = { version = "1.6.2", features = ["rustls"] }
aws-config = { version = "1.6.2", features = ["rustls"] }
aws-credential-types = "1.2.3"
aws-types = "1.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"
async-trait = "0.1"
enum_dispatch = "0.3.13"
