[package]
name = "lib_sandbox"
edition = "2024"

[dependencies]
mlua = { features = ["lua54", "serialize", "vendored"], version = "0.10.3" }
rquickjs = { version = "0.8", features = ["parallel"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
uuid = { version = "1", features = ["v4"] }
tonic = "0.14.2"
woofx3 = { path = "../../shared/clients/rust/db" }
