[package]
name = "woofx3"
version = "0.1.0"
edition = "2024"

[lib]
name = "woofx3"

[dependencies]
pbjson = "0.9.0"
pbjson-types = "0.9.0"
prost = "0.14.1"
prost-types = { version = "0.14.1" }
prost-wkt-types = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tonic = "0.14.2"
tonic-prost = "0.14.2"
