[package]
name = "woofx3-twirp"
version = "0.1.0"
edition = "2024"
description = "Twirp RPC client for woofx3 services"

[dependencies]
woofx3 = { path = "../db" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
async-trait = "0.1"
